fixed spelling mistake in index.html

--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -22,7 +22,7 @@
             <div class="title-block">
               <div class="title">WireGuard-VPN</div>
               <div class="title-description">
-                A no-nosense self-provisioning VPN server for dev teams
+                A no-nonsense self-provisioning VPN server for dev teams
               </div>
             </div>
             <div class="generate-block">
