updated html href opener for github link

--- a/backend/src/templates/404_error_page.html
+++ b/backend/src/templates/404_error_page.html
@@ -34,9 +34,14 @@
       <div class="copyright">
         <div class="github">
           <img src="../static/images/github.png" alt="github" />
-          <a class="github-link" href="https://github.com/cyber-mint/wg-vpn"
-            >https://github.com/cyber-mint/wg-vpn</a
+          <a 
+            class="github-link" 
+            href="https://github.com/cyber-mint/wg-vpn" 
+            rel="noopener noreferrer" 
+            target="_blank"
           >
+            https://github.com/cyber-mint/wg-vpn
+          </a>
         </div>
         <div class="cyber-mint">
           Copyright &#169; 2023, Cyber-Mint (Pty) Ltd, Provided under MIT
